...
    }()

    let filterName: UILabel = {
        let label = UILabel()
        label.textColor = .black
        label.font = UIFont.systemFont(ofSize: 16, weight: .regular)
        label.accessibilityIdentifier = "FilterCellName"
        return label
    }()

    private lazy var birdBox: CheckBoxView = {
        let check = CheckBoxView(frame: CGRect(x: 0, y: 0, width: 30, height: 30))
        check.addTarget(self, action: #selector(checkBox), for: .touchUpInside)
        check.accessibilityIdentifier = "FilterCellButton"
        return check
    }()

    @objc func checkBox() {
        birdBox.isSelected = !birdBox.isSelected
    }
...
