...

        guard let atmInfo = atmInfo else { return UITableViewCell() }

        //Ячейка выбранного продукта
        if indexPath.row == 0 {
            guard let cell = tableView.dequeueReusableCell(withIdentifier: ATMHeaderTableViewCell.reuseId, for: indexPath) as? ATMHeaderTableViewCell else { return UITableViewCell()}
            cell.accessibilityIdentifier = "BottomCardCellHeader"
            return setHeaderCell(for: cell, with: atmInfo)
        }

        //Ячейка адреса выбранного продукта
        if indexPath.row == 1 {
            guard let cell = tableView.dequeueReusableCell(withIdentifier: ATMAddressTableViewCell.reuseId, for: indexPath) as? ATMAddressTableViewCell else { return UITableViewCell()}
            cell.addressLabel.text = atmInfo.addressFull
            cell.accessibilityIdentifier = "BottomCardCellAddress"
            return cell
        }
        if indexPath.row == 2 {
            if let subwaysIds = atmInfo.subwayIds {
                if subwaysIds.count > 0 {
                    guard let cell = tableView.dequeueReusableCell(withIdentifier: ATMMetroStationTableViewCell.reuseId, for: indexPath) as? ATMMetroStationTableViewCell else { return UITableViewCell()}
...
