...

    let addressLabel: UILabel = {
        let label = UILabel()
        label.numberOfLines = 0
        label.translatesAutoresizingMaskIntoConstraints = false
        label.font = UIFont.systemFont(ofSize: 14, weight: .regular)
        label.accessibilityIdentifier = "BottomCardAddress"
        return label
    }()

    override func layoutSubviews() {
        super.layoutSubviews()
    }
...
