...
    var activeField: UITextField?
    var lastOffset: CGPoint!
    var keyboardHeight: CGFloat!

    let topText: UILabel = {
        let text = UILabel()
        text.text = "Регистрация"
        text.textColor = .white
        text.font = UIFont.systemFont(ofSize: ThemeManager.Font.Size.registrationTopText, weight: .semibold)

        return text
    }()

    let loginTextField: UITextField = {
        let login = UITextField()
        let attributePlaceHolder = NSAttributedString(string: "Логин от интернет-банка", attributes: [NSAttributedString.Key.foregroundColor: UIColor(white: 153.0 / 255.0, alpha: 1.0)])
        login.attributedPlaceholder = attributePlaceHolder
        login.font = UIFont.systemFont(ofSize: ThemeManager.Font.Size.registrationButtonLetters, weight: .regular)
        login.textColor = ThemeManager.Color.subtitleColor
        login.backgroundColor = .clear
        login.autocorrectionType = .no
        login.keyboardType = .emailAddress
        return login
    }()

    let passwordTextField: ToggleButton = {
        let password = ToggleButton()
        let attributePlaceHolder = NSAttributedString(string: "Пароль", attributes: [NSAttributedString.Key.foregroundColor: ThemeManager.Color.subtitleColor])
        password.attributedPlaceholder = attributePlaceHolder
        password.textColor = ThemeManager.Color.subtitleColor
        password.font = UIFont.systemFont(ofSize: ThemeManager.Font.Size.registrationButtonLetters, weight: .regular)
        password.backgroundColor = .clear
        password.autocorrectionType = .no
        password.keyboardType = .emailAddress
        password.textContentType = .password
        return password
    }()

    let pinCodeField: ToggleButton = {
        let pinCode = ToggleButton()
        let attributePlaceHolder = NSAttributedString(string: "ПИН", attributes: [NSAttributedString.Key.foregroundColor: UIColor(white: 153.0 / 255.0, alpha: 1.0)])
        pinCode.attributedPlaceholder = attributePlaceHolder
        pinCode.font = UIFont.systemFont(ofSize: ThemeManager.Font.Size.registrationButtonLetters, weight: .regular)
        pinCode.textColor = ThemeManager.Color.subtitleColor
        pinCode.backgroundColor = .clear
        pinCode.autocorrectionType = .no
        pinCode.keyboardType = .numberPad
        return pinCode
    }()

    let emailTextField: UITextField = {
        let email = UITextField()
        let attributePlaceHolder = NSAttributedString(string: "Email", attributes: [NSAttributedString.Key.foregroundColor: UIColor(white: 153.0 / 255.0, alpha: 1.0)])
        email.attributedPlaceholder = attributePlaceHolder
        email.font = UIFont.systemFont(ofSize: ThemeManager.Font.Size.registrationButtonLetters, weight: .regular)
        email.textColor = ThemeManager.Color.subtitleColor
        email.backgroundColor = .clear
        email.autocorrectionType = .no
        email.keyboardType = .emailAddress
        email.autocapitalizationType = .none
        return email
    }()

    let phoneTextField: UITextField = {
        let phone = UITextField()
        let attributePlaceHolder = NSAttributedString(string: "Номер телефона", attributes: [NSAttributedString.Key.foregroundColor: UIColor(white: 153.0 / 255.0, alpha: 1.0)])
        phone.attributedPlaceholder = attributePlaceHolder
        phone.font = UIFont.systemFont(ofSize: ThemeManager.Font.Size.registrationButtonLetters, weight: .regular)
        phone.textColor = ThemeManager.Color.subtitleColor
        phone.backgroundColor = .clear
        phone.autocorrectionType = .no
        phone.keyboardType = .numberPad
...
