...

    let settingsLabel: UILabel = {
        let label = UILabel()
        label.translatesAutoresizingMaskIntoConstraints = false
        label.font = UIFont.systemFont(ofSize: 16, weight: .bold)
        label.textColor = UIColor(red: 153 / 255, green: 153 / 255, blue: 153 / 255, alpha: 1)
        label.text = "Настройки"
        return label
    }()

    let scrollView: UIScrollView = {
        let scrollView = UIScrollView(frame: .zero)
        scrollView.alwaysBounceHorizontal = false
...
    }

    override func viewDidAppear(_ animated: Bool) {
        super.viewDidAppear(animated)

        guard let navController = navigationController else { return }
        addNavigationControllerTitleAnimation(navVC: navController, nextTitle: "Еще", direction: direction)

    }

    override func viewDidLayoutSubviews() {
        super.viewDidLayoutSubviews()

...
