...
        label.text = "Выйти"
        return label
    }()

    lazy var exitImageView: UIButton = {
        let button = UIButton()
        button.setImage(UIImage(named: "exit"), for: .normal)
        button.clipsToBounds = true
        button.backgroundColor = .clear
        button.addTarget(self, action: #selector(exitButtonTapped), for: .touchUpInside)
        return button
    }()

...
