...
        return label
    }()

    ///Надпись Pin Code на экране
    let pinCodeLabel: UILabel = {
        let label = UILabel()
        label.text = "PIN"
        label.font = UIFont.systemFont(ofSize: 16, weight: .regular)
        label.textColor = .white
        return label
    }()

    ///Кнопка авторизации по биометрике
...
